Add kawaii mode~ ✨
Signed-off-by: Asahi Lina <lina@asahilina.net>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
             <h3><a class="more" href="/fedora/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
         </div>
         <div>
-            <img src="/img/asahilinux_laptop.svg?{{ slicestr (readFile "static/img/asahilinux_laptop.svg" | md5) 0 8 }}" alt="Asahi Linux on a laptop">
+            <img class="laptop" src="/img/asahilinux_laptop.svg?{{ slicestr (readFile "static/img/asahilinux_laptop.svg" | md5) 0 8 }}" alt="Asahi Linux on a laptop">
         </div>
     </div>
 </section>
