--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,9 @@
                     <img src="/img/AsahiLinux_logomark.svg" class="logo" alt="Asahi Linux logo">
                 </a>
                 <span class="license">Licensed under CC BY-SA 4.0</span>
-                <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
+                <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.
+                    <span class="kawaii-disclaimer">Kawaii Asahi Linux logo by <a href="https://github.com/SAWARATSUKI/Logos">SAWARATSUKI</a> (see link for license).</span>
+                </span>
             </div>
             <div class="footer-links">
                 <ul class="footer-services">
