css: don't trans the opacity of images
this messes with the image itself and is probably unintentional since
linked images is a very Alyssa thing anyway.

Signed-off-by: Alyssa Rosenzweig <alyssa@rosenzweig.io>

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -524,6 +524,14 @@ a:hover {
     transition: opacity 0.5s;
 }
 
+/* The above rule makes sense for linked text but not for linked images.
+ *
+ * We shouldn't change the opacity of an image, since that would distort its content.
+ */
+.post a:hover:has(> img) {
+    opacity: 1.0;
+}
+
 a.stealth:hover {
     opacity: 1.0;
     cursor: default;
