--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,6 +45,7 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/community">Community</a></li>
                 <li><a href="/contribute">Contribute</a></li>
+                <li><a href="/governance">Governance</a></li>
                 <li><a href="https://github.com/AsahiLinux">GitHub</a></li>
                 <li><a href="https://github.com/AsahiLinux/docs/wiki">Wiki</a></li>
                 <li><a href="/blog">Blog</a></li>
