--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,7 @@
                 <ul class="footer-services">
                     <li><a href="https://social.treehouse.systems/@AsahiLinux"><i class="fab fa-mastodon"></i></a></li>
                     <li><a href="https://github.com/AsahiLinux"><i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.patreon.com/marcan"><i class="fab fa-patreon"></i></a></li>
+                    <!-- TODO: Open Collective? -->
                 </ul>
                 <ul class="footer-menu-container">
                     <li><a href="/about">About</a></li>
