Point to the new docs site instead of the wiki
There's still plenty of references to individual pages here and there
but this is a good start.

Signed-off-by: Davide Cavalca <davide@cavalca.name>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -87,8 +87,8 @@
     </div>
     <div class="documentation-card center-card">
         <i class="big-icon fas fa-book-open"></i>
-        <p>We are documenting the Apple Silicon platform on our GitHub wiki.</p>
-        <a href="https://github.com/AsahiLinux/docs/wiki" class="more">Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+        <p>We are documenting the Apple Silicon platform on our documentation website.</p>
+        <a href="/docs" class="more">Read the documentation<i class="fas fa-angle-right more"></i></a>
     </div>
 </section>
 <script>
