--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -46,8 +46,8 @@
                 <li><a href="/community">Community</a></li>
                 <li><a href="/contribute">Contribute</a></li>
                 <li><a href="/governance">Governance</a></li>
+                <li><a href="/docs">Documentation</a></li>
                 <li><a href="https://github.com/AsahiLinux">GitHub</a></li>
-                <li><a href="https://github.com/AsahiLinux/docs/wiki">Wiki</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/support">Donate</a></li>
             </ul>
