Add other socials to the footer
We need to update FontAwesome for this as the bsky icon was added in a
later release.

Signed-off-by: Davide Cavalca <davide@asahilinux.org>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,8 +12,10 @@
             <div class="footer-links">
                 <ul class="footer-services">
                     <li><a href="https://social.treehouse.systems/@AsahiLinux"><i class="fab fa-mastodon"></i></a></li>
+                    <li><a href="https://bsky.app/profile/asahilinux.org"><i class="fab fa-bluesky"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/asahilinux/"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/AsahiLinux"><i class="fab fa-github"></i></a></li>
-                    <!-- TODO: Open Collective? -->
+                    <!-- TODO: Open Collective? https://github.com/FortAwesome/Font-Awesome/issues/14475 -->
                 </ul>
                 <ul class="footer-menu-container">
                     <li><a href="/about">About</a></li>
