--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -49,6 +49,7 @@
                 <li><a href="/docs">Documentation</a></li>
                 <li><a href="https://github.com/AsahiLinux">GitHub</a></li>
                 <li><a href="/blog">Blog</a></li>
+                <li><a href="/merch">Merch</a></li>
                 <li><a href="/support">Donate</a></li>
             </ul>
         </div>
